feat(image) : load image

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,6 +4,8 @@ project(Filtylog)
 set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
+find_package(OpenCV REQUIRED)
+
 find_package(glfw3 3.3 REQUIRED)
 
 include_directories(imgui)
@@ -16,6 +18,14 @@ add_library(imgui STATIC
             imgui/backends/imgui_impl_glfw.cpp 
             imgui/backends/imgui_impl_opengl3.cpp)
 
+include_directories(stb_image)
+add_library(stb_image STATIC stb_image/stb_image.cpp)
+
+include_directories(imGuiFileDialog)
+add_library(imGuiFileDialog STATIC imGuiFileDialog/ImGuiFileDialog.cpp)
+
+include_directories(glad)
+
 add_executable(filtylog main.cpp)
 
-target_link_libraries(filtylog imgui glfw GL dl)
+target_link_libraries(filtylog imgui imGuiFileDialog stb_image glfw GL dl ${OpenCV_LIBS})
