--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,6 +24,9 @@ add_library(stb_image STATIC stb_image/stb_image.cpp)
 include_directories(imGuiFileDialog)
 add_library(imGuiFileDialog STATIC imGuiFileDialog/ImGuiFileDialog.cpp)
 
+include_directories(filters/simpleEffects)
+include_directories(filters/utils)
+
 include_directories(glad)
 
 add_executable(filtylog main.cpp)
