feat(filters): added crosshatch and dither filters

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -2,10 +2,12 @@ target_sources("${PROJECT_NAME}_lib" PRIVATE
 "artisticFilters/cartoon.cc"
 "artisticFilters/colorPencil.cc"
 "artisticFilters/halftone.cc"
+"artisticFilters/crossHatch.cc"
+"artisticFilters/dither.cc"
 "utils/bilateralFilter.cc"
 "utils/dilation.cc"
 "utils/erosion.cc"
-"utils/gaussianFilter.cc"
+"utils/convolution.cc"
 "utils/grayscale.cc"
 "utils/medianCut.cc"
 "utils/medianFilter.cc"
@@ -16,4 +18,5 @@ target_sources("${PROJECT_NAME}_lib" PRIVATE
 "utils/sepia.cc"
 "utils/sobelEdgeDetection.cc"
 "utils/solarisation.cc"
+"utils/sharpen.cc"
 )
