--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -4,6 +4,7 @@ target_sources("${PROJECT_NAME}_lib" PRIVATE
 "artisticFilters/halftone.cc"
 "artisticFilters/crossHatch.cc"
 "artisticFilters/dither.cc"
+"artisticFilters/oilPainting.cc"
 "utils/bilateralFilter.cc"
 "utils/dilation.cc"
 "utils/erosion.cc"
