feat(vintage): add noise and final vintage

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -18,4 +18,5 @@ target_sources("${PROJECT_NAME}_lib" PRIVATE
 "utils/sobelEdgeDetection.cc"
 "utils/solarisation.cc"
 "utils/vignette.cc"
+"utils/noise.cc"
 )
