feat(Histogram) : histogram implemented

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -5,11 +5,13 @@ target_sources("${PROJECT_NAME}_lib" PRIVATE
 "artisticFilters/crossHatch.cc"
 "artisticFilters/dither.cc"
 "artisticFilters/oilPainting.cc"
+"artisticFilters/solarisation.cc"
 "utils/bilateralFilter.cc"
 "utils/dilation.cc"
 "utils/erosion.cc"
 "utils/convolution.cc"
 "utils/grayscale.cc"
+"utils/histogram.cc"
 "utils/medianCut.cc"
 "utils/medianFilter.cc"
 "utils/negative.cc"
@@ -18,6 +20,5 @@ target_sources("${PROJECT_NAME}_lib" PRIVATE
 "utils/robertEdgeDetection.cc"
 "utils/sepia.cc"
 "utils/sobelEdgeDetection.cc"
-"utils/solarisation.cc"
 "utils/sharpen.cc"
 )
